--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=api_user
+DB_USER=bug_tracker_user
 DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=bug_tracker_test
+DB_DATABASE=bug_tracker
