--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Je Yeong",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "helmet": "^4.6.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
